--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body
 	height:100%;
 	margin:0;
 	color:white;
-	background-image:url(http://birdonwheels5.no-ip.org/home/img/stars3.jpg);
+	background-image:url(http://birdonwheels5.ddns.net/home/img/stars3.jpg);
 	#background-image:url(http://i.imgur.com/TN6ie5q.gif);
 	#-moz-background-size: cover;
 	#-webkit-background-size: cover;
